# metrun

./: .gitignore  CHANGELOG.md  README.md  TODO.md  ai_costs.csv  demo.py  goal.yaml  planfile.yaml  project.sh  pyproject.toml  pyqual.yaml
.pyqual/: pipeline.db
docs/: README.md
examples/: README.md  conftest.py  standalone.py  test_standalone.py
examples/profile/: basic_app.py  cprofile_bridge.py  json_export.py  minimal.py  sections.py  test_basic_app.py  test_cprofile_bridge.py  test_json_export.py  test_minimal.py  test_sections.py  test_toon_output.py  test_toon_stdout.py  toon_output.py  toon_stdout.py
examples/records/: demo.jsonl  sample.jsonl  test_demo_records.py  test_sample.py
metrun/: __init__.py  __main__.py  bottleneck.py  cli.py  cprofile_bridge.py  critical_path.py  flamegraph.py  profiler.py  records_io.py  report.py  suggestions.py  toon.py  toon.py.bak
project/: README.md  analysis.toon.yaml  calls.mmd  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  metrun-cli-flame.txt  metrun-cli-flows.txt  metrun-cli-inspect.txt  metrun-cli-profile.txt  metrun-demo.txt  metrun-flame.txt  metrun.toon.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
tests/: __init__.py  test_bottleneck.py  test_cprofile_bridge.py  test_critical_path.py  test_flamegraph.py  test_integration.py  test_profiler.py  test_records_io.py  test_report.py  test_suggestions.py  test_toon.py
