[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrun"
version = "0.1.0"
description = "Execution Intelligence Tool — Bottleneck Engine + Human Report Generator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["profiling", "performance", "bottleneck", "tracing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["metrun*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
